--- a/teste-front/package.json
+++ b/teste-front/package.json
@@ -22,12 +22,13 @@
   },
   "devDependencies": {
     "@quasar/app-vite": "^1.3.0",
-    "autoprefixer": "^10.4.2",
+    "autoprefixer": "^10.4.16",
     "eslint": "^8.10.0",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-vue": "^9.0.0",
-    "postcss": "^8.4.14",
+    "postcss": "^8.4.33",
     "prettier": "^2.5.1",
+    "tailwindcss": "^3.4.1",
     "webpack": "^5.89.0"
   },
   "engines": {
